--- a/public/index.html
+++ b/public/index.html
@@ -9,7 +9,17 @@
       name="description"
       content="Web site created using create-react-app"
     />
-    <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
+    <style>
+      /* 背景色を変えるために、width,height,marginを調整する */
+     html,body,#root{
+       width:100%;
+       height:100%;
+     }
+     body{
+       margin:0;
+     }
+    </style>
+    <!-- <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" /> -->
     <!--
       manifest.json provides metadata used when your web app is installed on a
       user's mobile device or desktop. See https://developers.google.com/web/fundamentals/web-app-manifest/
