--- a/public/index.html
+++ b/public/index.html
@@ -14,9 +14,8 @@
      html,body,#root{
        width:100%;
        height:100%;
-     }
-     body{
        margin:0;
+       padding:0;
      }
     </style>
     <!-- <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" /> -->
