implemented result graph page

--- a/public/index.html
+++ b/public/index.html
@@ -2,6 +2,8 @@
 <html lang="ja">
   <head>
     <meta charset="utf-8" />
+    <!---日本語のフォントを外部から読み込む-->
+    <link href="https://fonts.googleapis.com/css2?family=Noto+Sans+JP:wght@300&display=swap" rel="stylesheet">
     <meta name="viewport" content="width=device-width, initial-scale=1, minimum-scale=1, maximum-scale=1, user-scalable=no">
     <style>
      html,body,#root{
